--- a/index.html
+++ b/index.html
@@ -3,29 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="robots" content="noindex,nofollow" />
-  <title>autocare.pw — Domain For Sale</title>
+  <title>autocare.pw</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='82' font-size='90'>⚙️</text></svg>">
 </head>
 <body>
-  <main class="hero">
-    <div class="card">
-      <div class="logo">autocare.pw</div>
-      <h1>Domain For Sale</h1>
-      <p class="tagline">Premium short domain for automotive services, repairs, parts, or e-commerce.</p>
+  <header>
+    <h1>autocare.pw</h1>
+    <p>Site coming soon. If you own this domain and need help with DNS or hosting, check the README.</p>
+  </header>
 
-      <a class="btn" href="mailto:psy191190@gmail.com?subject=Domain%20Inquiry%20for%20autocare.pw&body=Hi%2C%0A%0AI%27m%20interested%20in%20purchasing%20the%20domain%20autocare.pw.%20Please%20send%20details%20and%20pricing.%0A%0AThanks%2C%0A">
-        Contact: psy191190@gmail.com
-        <span class="btn-note">— click to email</span>
-      </a>
-
-      <p class="details">Price available on request. Fast transfer and secure escrow available.</p>
-
-      <footer class="small">
-        Want different contact details or a custom banner? Edit index.html and styles.css.
-      </footer>
-    </div>
+  <main>
+    <section>
+      <h2>Status</h2>
+      <p>This is a placeholder site published from the GitHub repository. Replace these files with your site build when ready.</p>
+    </section>
   </main>
+
+  <footer>
+    <p>Hosted via GitHub Pages — CNAME: autocare.pw</p>
+  </footer>
 </body>
 </html>
